# threshold-signer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: api.rs  config.rs  db.rs  main.rs  orchestrator.rs  p2p.rs  primitives.rs  protocol.rs  tracking.rs
crates/node/src/network/: computation.rs  mod.rs
crates/node/src/providers/ecdsa/: key_generation.rs  mod.rs  presign.rs  sign.rs  triple.rs
crates/node/src/providers/eddsa/: key_generation.rs  mod.rs  sign.rs
crates/threshold-signatures/: Cargo.toml  README.md
crates/threshold-signatures/src/frost/: README.md
crates/tls/: Cargo.toml  README.md
docker/: Dockerfile  docker-compose.yml
scripts/: generate-keys.sh  generate-p2p-keys.sh  launch-localnet.sh  setup-nodes.sh  test-e2e.sh
