[workspace]
resolver = "2"
members = [
    "crates/threshold-signatures",
    "crates/tls",
    "crates/node",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Workspace members
threshold-signatures = { path = "crates/threshold-signatures" }
mpc-tls = { path = "crates/tls" }
threshold-signer-node = { path = "crates/node" }

# Crypto
aes-gcm = "0.10.3"
auto_ops = "0.3.0"
blstrs = "0.7.1"
byteorder = "1.5.0"
curve25519-dalek = { version = "4.1.3", features = ["group", "serde"], default-features = false }
digest = "0.10.7"
ecdsa = { version = "0.16.9", features = ["digest", "hazmat"] }
ed25519-dalek = { version = "2.2.0", features = ["serde", "digest", "pkcs8", "rand_core"] }
elliptic-curve = "0.13.8"
frost-core = { version = "2.2.0", default-features = false, features = ["serde"] }
frost-ed25519 = { version = "2.2.0", default-features = false }
frost-secp256k1 = { version = "2.2.0", default-features = false }
hkdf = "0.12.4"
k256 = "0.13.4"
keccak = "0.1.5"
reddsa = { git = "https://github.com/near/reddsa", rev = "c7cd92a55f7399d8d7f8c0ac386445b5f898f197", default-features = false, features = ["frost"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
signature = "2.2.0"
subtle = "2.6.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

# Serialization
borsh = { version = "1.6.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
rmp-serde = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0"
serde_yaml = "0.9.34"

# Async / networking
async-trait = "0.1.89"
axum = "0.8.8"
futures = "0.3.32"
futures-lite = "2.6.1"
flume = "0.12.0"
reqwest = { version = "0.12.28", features = ["json"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "ring"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false }
tokio-util = { version = "0.7.12", features = ["time"] }

# TLS
rcgen = "0.13.2"
x509-parser = "0.18.1"

# Storage
rocksdb = "0.21.0"

# Utilities
anyhow = "1.0.101"
bytes = "1.11.1"
clap = { version = "4.5.59", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["as_ref", "constructor", "deref", "display", "from", "into"] }
itertools = "0.14.0"
lru = "0.16.3"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }

# Random
getrandom = "0.2.12"
rand = "0.8.5"
rand_chacha = "0.3"
rand_core = "0.6.4"

# Testing
insta = { version = "1.46.3", features = ["json", "redactions"] }
rstest = "0.26.1"
criterion = { version = "0.8.2", features = ["html_reports"] }

[workspace.lints.clippy]
assertions_on_result_states = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release]
opt-level = 3
