[workspace]
resolver = "2"
members = [
    "crates/node",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Upstream crates (from near/mpc, pinned to specific commit)
threshold-signatures = { git = "https://github.com/near/mpc", rev = "49a6ad6", package = "threshold-signatures" }
mpc-tls = { git = "https://github.com/near/mpc", rev = "49a6ad6", package = "mpc-tls" }

# Workspace members
threshold-signer-node = { path = "crates/node" }

# Crypto
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.2.0", features = ["serde", "digest", "pkcs8", "rand_core"] }
k256 = "0.13.4"
sha2 = "0.10.9"

# Serialization
borsh = { version = "1.6.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
rmp-serde = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

# Async / networking
async-trait = "0.1.89"
axum = "0.8.8"
futures = "0.3.32"
flume = "0.12.0"
reqwest = { version = "0.12.28", features = ["json"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "ring"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false }
tokio-util = { version = "0.7.12", features = ["time"] }

# Storage
rocksdb = "0.21.0"

# Utilities
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5.59", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["as_ref", "constructor", "deref", "display", "from", "into"] }
itertools = "0.14.0"
lru = "0.16.3"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }

# Random
rand = "0.8.5"
rand_core = "0.6.4"

[workspace.lints.clippy]
assertions_on_result_states = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[profile.release]
opt-level = 3
